deployment/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  # namespace: irena-playground
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
            # - name: mysql-data
            #   mountPath: "/var/lib/mysql"
              
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-config
        # - name: mysql-data
        #   persistentVolumeClaim:
        #     claimName: mysql-data-disk
