deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: trial-test
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 3000
  type: LoadBalancer
