deployment/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress-irena
  # namespace: trial-test
spec:
  entryPoints:
    - web-pv
  routes:
    - match: Host(`nginx-irena.ap-southeast-1.priv.plg.tidnex.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: node-service
          port: 3200
